# C1SegmentationTool

./: .gitignore  README.md
C1SegmentationTool/: CMakeLists.txt
C1SegmentationTool/CreateROI/: CMakeLists.txt  CreateROI.py
C1SegmentationTool/DenseCorrespondenceFid/: CMakeLists.txt  DenseCorrespondenceFid.py
C1SegmentationTool/FiducialTransform/: CMakeLists.txt  FiducialTransform.py
C1SegmentationTool/RealignedFiducials/: P03.fcsv  P04.fcsv  P05.fcsv  P06.fcsv  P07.fcsv  P08.fcsv  P09.fcsv  P10.fcsv  P11.fcsv  P13.fcsv  P14.fcsv  P15.fcsv  P16.fcsv  P17.fcsv  P18.fcsv  P19.fcsv  P20.fcsv  P21.fcsv  P22.fcsv  P23.fcsv  P24.fcsv  P25.fcsv  P26.fcsv  P27.fcsv  P28.fcsv  P30.fcsv  P31.fcsv  P32.fcsv  P33.fcsv  P35.fcsv  P36.fcsv  P37.fcsv  P38.fcsv  P39.fcsv  P40.fcsv  P41.fcsv  P42.fcsv  P43.fcsv  P44.fcsv  P46.fcsv  (+36 more)
C1SegmentationTool/VolumeClip/: CMakeLists.txt  VolumeClip.py
C1SegmentationTool/VolumeToModel/: CMakeLists.txt  VolumeToModel.py
